org.mmisw.ontmd Ontology Metadata Manager
Carlos Rueda - MMI / MBARI

ChangeLog

2008-11-14   -   Voc2RDF 2.0.0.beta4

	Issue 27: URIs have # signs instead of / before terms
	http://code.google.com/p/mmisw/issues/detail?id=27
	
	- JenaUtil2. Converter, OntMdServiceImpl:
	  Re-setting fragment separator to / and doing necessary adjustments to start
	  using / in general.
	  
	oops: some URIs are coming with trailing # in the links in the metadata panel.
	For now, any trailing framegments are just removed before creating the links,
	see MetadataPanel.NewUri.setUri(String uri, boolean link).

	  ok: updated the issue with some instructions to verify the change.
	
	
	
	- weird behavior on my station: couldn't "load" a local file in the ontmd editor;
	  seemed like a cache issue with my browser.  (no problem now).
	  
	 
	- Voc2RDF: now transfers the sessionId/userId information from the given parameters
	  (eg, from ORR front-end) to the ontmd tool so the user won't have to log in again.
	  Fixes issue 30: http://code.google.com/p/mmisw/issues/detail?id=30
	  
	  
2008-11-12

	- Done Request 46: allow to manually specify version of submitted ontology (internal)

	- Done 41: add cdip namespace, and others.
	  Ok, ontmd is using the following text file as external resources to get the authorities
	  and the resources types:
		    authorities.csv
		    resourcetypes.csv
	  See Config.java
	   
	
	Voc2RDF (2.0.0.beta2)
	Re. 43: Handle non-UTF8 inputs 
	- Voc2RDF: New _convertToUtf8(String str) utility in Converter.
	  FIXME implementation is rather simplistic:
	     return new String(str.getBytes(), "UTF-8"))
	  A better approach is to determine the actual original charset and
	  then do the conversion to UTF-8.
	  
	  
2008-11-11 (1.0.0.beta)    (Happy B-day Ini!)

	- Declaring beta status!
	
	- Using new Voc2RDF logo created by Paul (thanks!).


2008-11-10 (1.0.0.alpha7)
	- Fixed 38: show the "owl" and "html" links