@@ -11,9 +11,10 @@
   margin-top: 20px;
 }
 
-table {
-	empty-cells: hide;
-}
+/* NOTE: this would make firefox to hide some borders.
+Removed to fix http://code.google.com/p/mmisw/issues/detail?id=97
+table { empty-cells: hide; }
+*/
 
 /* inline tables */
 table.inline {
